latest from prod

--- a/locales/cs.json
+++ b/locales/cs.json
@@ -23,8 +23,8 @@
         "civic_number_warning": "Uveďte číslo domu, pokud je k dispozici",
         "company_label": "Společnost",
         "contact_method_title": "Kontaktní informace",
-        "country_code": "Kód země/regionu",
-        "country_label": "Země/region",
+        "country_code": "Kód země\/regionu",
+        "country_label": "Země\/region",
         "county_label": "Kraj",
         "county_placeholder": "Kraj",
         "delivery_option_title": "Způsob dodání",
@@ -59,8 +59,8 @@
         "region_label": "Region",
         "region_none": "Nic nevybráno",
         "region_placeholder": "Region",
-        "state_and_territory_label": "Stát/území",
-        "state_and_territory_placeholder": "Stát/území",
+        "state_and_territory_label": "Stát\/území",
+        "state_and_territory_placeholder": "Stát\/území",
         "state_label": "Stát",
         "state_placeholder": "Stát",
         "stored_addresses_label": "Uložené adresy",
@@ -109,8 +109,8 @@
         "address_company_blank": "Zadejte název společnosti",
         "address_company_contains_html_tags": "Společnost nesmí obsahovat značky HTML.",
         "address_company_too_long": "Název společnosti je příliš dlouhý (maximálně 255 znaků)",
-        "address_country_blank": "Vyberte zemi/region",
-        "address_country_not_supported": "Do této země/regionu v současnosti neposíláme. Zadejte novou dodací adresu a zkuste to znovu.",
+        "address_country_blank": "Vyberte zemi\/region",
+        "address_country_not_supported": "Do této země\/regionu v současnosti neposíláme. Zadejte novou dodací adresu a zkuste to znovu.",
         "address_first_name_blank": "Zadejte jméno",
         "address_first_name_contains_html_tags": "Jméno nesmí obsahovat značky HTML.",
         "address_first_name_too_long": "Jméno je příliš dlouhé (maximálně 255 znaků)",
@@ -118,12 +118,12 @@
         "address_last_name_contains_html_tags": "Příjmení nesmí obsahovat značky HTML.",
         "address_last_name_too_long": "Příjmení je příliš dlouhé (maximálně 255 znaků)",
         "address_phone_blank": "Zadejte platné telefonní číslo",
-        "address_province_blank": "Vyberte stát/provincii",
-        "address_zip_blank": "Zadejte PSČ / poštovní směrovací číslo"
+        "address_province_blank": "Vyberte stát\/provincii",
+        "address_zip_blank": "Zadejte PSČ \/ poštovní směrovací číslo"
       },
       "order_summary": {
         "discount_placeholder": "Slevový kód",
-        "discount_requires_customer_notice": "Zadejte informace o dopravě a použijte slevový kód <strong style=\"text-transform:upgnate\">%{code}</strong>",
+        "discount_requires_customer_notice": "Zadejte informace o dopravě a použijte slevový kód <strong style=\"text-transform:upgnate\">%{code}<\/strong>",
         "discount_savings_notice": "Po %{discount_amount} ve slevách",
         "discount_title": "Sleva",
         "estimated_tax_label": "Odhadovaná daň",
@@ -163,7 +163,7 @@
         "sale_price": "Prodejní cena",
         "scroll_order_summary": "Posouváním zobrazte další položky",
         "shipping_default_value": "Vypočteno v dalším kroku",
-        "shipping_information_does_not_meet_discount_requirements_notice": "Slevový kód <strong style=\"text-transform:uppercase\">%{code}</strong> nelze použít pro vaši dodací dresu",
+        "shipping_information_does_not_meet_discount_requirements_notice": "Slevový kód <strong style=\"text-transform:uppercase\">%{code}<\/strong> nelze použít pro vaši dodací dresu",
         "shipping_label": "Doprava",
         "shipping_pending_message": "Zatím není k dispozici",
         "shipping_pending_value": "—",
@@ -202,7 +202,7 @@
         "different_credit_card_label": "Použít jinou kreditní kartu",
         "discount_button_action_label": "Použít slevový kód",
         "express_checkout_free_order": "Za bezplatnou objednávku vám nebude účtován poplatek",
-        "free_order_notice_html": "Vaše objednávka je <strong>bezplatná</strong>. Není vyžadována žádná platba.",
+        "free_order_notice_html": "Vaše objednávka je <strong>bezplatná<\/strong>. Není vyžadována žádná platba.",
         "generic_incorrect_card_info": "Vaše platební údaje nelze ověřit. Zkontrolujte údaje o kartě a zkuste to znovu.",
         "no_js_credit_card_fields_redirect_hint": "Budete přesměrováni na přidání informací o platbě.",
         "no_method_error": "Tento obchod momentálně nepřijímá platby.",
@@ -230,7 +230,7 @@
       },
       "payment_summary": {
         "billing_address_title": "Fakturační adresa",
-        "credit_card_expires_on_notice": "Platnost skončí za %{month}/%{year}",
+        "credit_card_expires_on_notice": "Platnost skončí za %{month}\/%{year}",
         "express_payment_gateway_label": "Expresní",
         "free_label": "Zdarma",
         "gift_card_current_balance_notice": "Aktuální zůstatek %{amount}",
