--- a/locales/da.json
+++ b/locales/da.json
@@ -23,8 +23,8 @@
         "civic_number_warning": "Tilføj et husnummer, hvis du har et",
         "company_label": "Firma",
         "contact_method_title": "Kontaktoplysninger",
-        "country_code": "Lande-/regionskode",
-        "country_label": "Land/region",
+        "country_code": "Lande-\/regionskode",
+        "country_label": "Land\/region",
         "county_label": "Amt",
         "county_placeholder": "Amt",
         "delivery_option_title": "Leveringsmetode",
@@ -59,8 +59,8 @@
         "region_label": "Region",
         "region_none": "Ingen valgt",
         "region_placeholder": "Region",
-        "state_and_territory_label": "Stat/territorium",
-        "state_and_territory_placeholder": "Stat/territorium",
+        "state_and_territory_label": "Stat\/territorium",
+        "state_and_territory_placeholder": "Stat\/territorium",
         "state_label": "Stat",
         "state_placeholder": "Stat",
         "stored_addresses_label": "Gemte adresser",
@@ -109,8 +109,8 @@
         "address_company_blank": "Indtast et firmanavn",
         "address_company_contains_html_tags": "Firma må ikke indeholde HTML-tags.",
         "address_company_too_long": "Firma er for langt (maks. 255 tegn)",
-        "address_country_blank": "Vælg et land/en region",
-        "address_country_not_supported": "Vi sender i øjeblikket ikke til dette land/denne region. Indtast en ny leveringsadresse, og prøv igen.",
+        "address_country_blank": "Vælg et land\/en region",
+        "address_country_not_supported": "Vi sender i øjeblikket ikke til dette land\/denne region. Indtast en ny leveringsadresse, og prøv igen.",
         "address_first_name_blank": "Indtast et fornavn",
         "address_first_name_contains_html_tags": "Fornavn må ikke indeholde HTML-tags.",
         "address_first_name_too_long": "Fornavn er for langt (maks. 255 tegn)",
@@ -118,7 +118,7 @@
         "address_last_name_contains_html_tags": "Efternavn må ikke indeholde HTML-tags.",
         "address_last_name_too_long": "Efternavn er for langt (maks. 255 tegn)",
         "address_phone_blank": "Indtast et gyldigt telefonnummer",
-        "address_province_blank": "Vælg en stat/provins",
+        "address_province_blank": "Vælg en stat\/provins",
         "address_zip_blank": "Indtast et postnummer",
         "address_zip_invalid_for_country": "Indtast et gyldigt postnummer for %{country}",
         "address_zip_invalid_for_country_and_province": "Indtast et gyldigt postnummer for %{province}, %{country}",
@@ -240,12 +240,12 @@
         "applied_free_shipping_discount_label": "Anvendt",
         "apply_discount_button_label": "Anvend",
         "calculating_shipping": "Beregner ...",
-        "cart_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}</strong>-rabatkoden er ikke gyldig for varerne i din indkøbskurv",
+        "cart_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}<\/strong>-rabatkoden er ikke gyldig for varerne i din indkøbskurv",
         "collapse_order_summary": "Skjul ordreoversigt",
         "confirmation_number_label": "Bekræftelse #%{confirmation_number}",
         "cost_table_title": "Udgiftsoversigt",
-        "customer_already_used_once_per_customer_discount_notice": "<strong style=\"text-transform:uppercase\">%{code}</strong>-rabatkoden er allerede blevet brugt",
-        "customer_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}</strong>-rabatkode er ikke tilgængelig for dig lige nu",
+        "customer_already_used_once_per_customer_discount_notice": "<strong style=\"text-transform:uppercase\">%{code}<\/strong>-rabatkoden er allerede blevet brugt",
+        "customer_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}<\/strong>-rabatkode er ikke tilgængelig for dig lige nu",
         "description_label": "Beskrivelse",
         "discount_already_applied": "Der er givet en rabat på denne ordre. Du kan ikke tilføje endnu en rabat.",
         "discount_and_gift_card_savings_notice": "Efter %{discount_amount} i rabat og %{gift_card_amount} i gavekort",
@@ -253,7 +253,7 @@
         "discount_has_been_removed": "Rabat er fjernet",
         "discount_label": "Rabatkode",
         "discount_placeholder": "Rabatkode",
-        "discount_requires_customer_notice": "Indtast dine forsendelsesoplysninger for at anvende <strong style=\"text-transform:uppercase\">%{code}</strong>-rabatkoden",
+        "discount_requires_customer_notice": "Indtast dine forsendelsesoplysninger for at anvende <strong style=\"text-transform:uppercase\">%{code}<\/strong>-rabatkoden",
         "discount_savings_notice": "Efter %{discount_amount} i rabat",
         "discount_title": "Rabat",
         "estimated_tax_label": "Anslået skat",
@@ -293,7 +293,7 @@
         "sale_price": "Udsalgspris",
         "scroll_order_summary": "Scroll for flere varer",
         "shipping_default_value": "Beregnes ved næste trin",
-        "shipping_information_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}</strong>-rabatkode er ikke tilgængelig for din leveringsadresse",
+        "shipping_information_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}<\/strong>-rabatkode er ikke tilgængelig for din leveringsadresse",
         "shipping_label": "Forsendelse",
         "shipping_pending_message": "Ikke tilgængelig endnu",
         "shipping_pending_value": "—",
@@ -332,7 +332,7 @@
         "different_credit_card_label": "Brug et andet kreditkort",
         "discount_button_action_label": "Anvend rabatkode",
         "express_checkout_free_order": "Du vil ikke blive opkrævet for en gratis ordre",
-        "free_order_notice_html": "Din ordre er <strong>gratis</strong>. Der kræves ingen betaling.",
+        "free_order_notice_html": "Din ordre er <strong>gratis<\/strong>. Der kræves ingen betaling.",
         "generic_incorrect_card_info": "Dine betalingsoplysninger kunne ikke bekræftes. Tjek dine kortoplysninger, og prøv igen.",
         "no_js_credit_card_fields_redirect_hint": "Du vil blive omdirigeret for at tilføje dine betalingsoplysninger.",
         "no_method_error": "Denne butik kan ikke acceptere betalinger lige nu.",
@@ -360,7 +360,7 @@
       },
       "payment_summary": {
         "billing_address_title": "Faktureringsadresse",
-        "credit_card_expires_on_notice": "Udløber %{month}/%{year}",
+        "credit_card_expires_on_notice": "Udløber %{month}\/%{year}",
         "express_payment_gateway_label": "Hurtig",
         "free_label": "Gratis",
         "gift_card_current_balance_notice": "Nuværende saldo %{amount}",
