--- a/locales/de.json
+++ b/locales/de.json
@@ -61,13 +61,13 @@
       "account": "Account",
       "cart": "Warenkorb",
       "language": "Sprache",
-      "country": "Land/Region"
+      "country": "Land\/Region"
     }
   },
   "footer": {
     "general": {
       "language": "Sprache",
-      "country": "Land/Region",
+      "country": "Land\/Region",
       "we_accept": "Wir akzeptieren"
     },
     "newsletter": {
@@ -178,7 +178,7 @@
       "need_help": "Brauchst Du Hilfe?",
       "view_details": "Details ansehen",
       "include_taxes": "Inkl. Steuern.",
-      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link link--accented\">Steuern</a> werden im Checkout berechnet",
+      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link link--accented\">Steuern<\/a> werden im Checkout berechnet",
       "reviews_count": {
         "zero": "Noch keine Bewertungen",
         "one": "{{ count }} Bewertung",
@@ -324,12 +324,12 @@
       "fulfillment_status": "Lieferstatus",
       "view_details": "Bestelldetails ansehen",
       "cancelled_at": "Widerrufen am: {{date}}. Grund: {{reason}}",
-      "fulfillment_with_url_and_number_html": "Alle Produkte wurden am {{date}} versandt. Verfolge die Lieferung über die Nummer {{tracking_number}} oder indem Du  <a href=\"{{tracking_url}}\" target=\"_blank\">hier klickst</a>.",
-      "fulfillment_with_url_html": "Alle Produkte wurden am {{date}} versandt. Verfolge die Lieferung, indem Du <a href=\"{{tracking_url}}\" target=\"_blank\">hier klickst</a>.",
+      "fulfillment_with_url_and_number_html": "Alle Produkte wurden am {{date}} versandt. Verfolge die Lieferung über die Nummer {{tracking_number}} oder indem Du  <a href=\"{{tracking_url}}\" target=\"_blank\">hier klickst<\/a>.",
+      "fulfillment_with_url_html": "Alle Produkte wurden am {{date}} versandt. Verfolge die Lieferung, indem Du <a href=\"{{tracking_url}}\" target=\"_blank\">hier klickst<\/a>.",
       "fulfillment_with_number_html": "Alle Produkte wurden am {{date}} versandt. Verfolge die Lieferung über die Nummer {{tracking_number}}.",
       "fulfillment_html": "Alle Produkte wurden am {{date}} versandt.",
-      "line_fulfillment_with_url_and_number_html": "Dieses Produkt wurde am {{date}} versandt. Verfolge die Lieferung über die Nummer {{tracking_number}} oder indem Du <a href=\"{{tracking_url}}\" target=\"_blank\">hier klickst</a>.",
-      "line_fulfillment_with_url_html": "Dieses Produkt wurde am {{date}} versandt. Verfolge die Lieferung, indem Du <a href=\"{{tracking_url}}\" target=\"_blank\">hier klickst</a>.",
+      "line_fulfillment_with_url_and_number_html": "Dieses Produkt wurde am {{date}} versandt. Verfolge die Lieferung über die Nummer {{tracking_number}} oder indem Du <a href=\"{{tracking_url}}\" target=\"_blank\">hier klickst<\/a>.",
+      "line_fulfillment_with_url_html": "Dieses Produkt wurde am {{date}} versandt. Verfolge die Lieferung, indem Du <a href=\"{{tracking_url}}\" target=\"_blank\">hier klickst<\/a>.",
       "line_fulfillment_with_number_html": "Dieses Produkt wurde am {{date}} versandt. Verfolge die Lieferung über die Nummer {{tracking_number}}.",
       "line_fulfillment_html": "Dieses Produkt wurde am {{date}} versandt.",
       "total": "Gesamt",
@@ -458,8 +458,8 @@
         "civic_number_warning": "Fügen Sie eine Hausnummer hinzu, wenn Sie eine haben",
         "company_label": "Unternehmen",
         "contact_method_title": "Kontaktinformationen",
-        "country_code": "Länder-/Regionalcode",
-        "country_label": "Land/Region",
+        "country_code": "Länder-\/Regionalcode",
+        "country_label": "Land\/Region",
         "county_label": "Kreis",
         "county_placeholder": "Kreis",
         "delivery_option_title": "Liefermethode",
@@ -494,8 +494,8 @@
         "region_label": "Region",
         "region_none": "Keine ausgewählt",
         "region_placeholder": "Region",
-        "state_and_territory_label": "Bundesland/Territorium",
-        "state_and_territory_placeholder": "Bundesland/Territorium",
+        "state_and_territory_label": "Bundesland\/Territorium",
+        "state_and_territory_placeholder": "Bundesland\/Territorium",
         "state_label": "Bundesland",
         "state_placeholder": "Bundesland",
         "stored_addresses_label": "Gespeicherte Anschriften",
@@ -544,8 +544,8 @@
         "address_company_blank": "Geben Sie einen Unternehmensnamen ein",
         "address_company_contains_html_tags": "Das Unternehmen darf keine HTML-Tags enthalten.",
         "address_company_too_long": "Der Unternehmensname ist zu lang (maximal 255 Zeichen)",
-        "address_country_blank": "Wählen Sie ein Land/eine Region",
-        "address_country_not_supported": "Wir liefern derzeit nicht in dieses Land/diese Region. Geben Sie eine neue Lieferanschrift ein und versuchen Sie es erneut.",
+        "address_country_blank": "Wählen Sie ein Land\/eine Region",
+        "address_country_not_supported": "Wir liefern derzeit nicht in dieses Land\/diese Region. Geben Sie eine neue Lieferanschrift ein und versuchen Sie es erneut.",
         "address_first_name_blank": "Geben Sie einen Vornamen ein",
         "address_first_name_contains_html_tags": "Der Vorname darf keine HTML-Tags enthalten.",
         "address_first_name_too_long": "Der Vorname ist zu lang (maximal 255 Zeichen)",
@@ -553,10 +553,10 @@
         "address_last_name_contains_html_tags": "Der Nachname darf keine HTML-Tags enthalten.",
         "address_last_name_too_long": "Der Nachname ist zu lang (maximal 255 Zeichen)",
         "address_phone_blank": "Geben Sie eine gültige Telefonnummer ein",
-        "address_province_blank": "Wählen Sie ein Bundesland / eine Provinz",
-        "address_zip_blank": "Geben Sie eine PLZ / eine Postleitzahl ein",
+        "address_province_blank": "Wählen Sie ein Bundesland \/ eine Provinz",
+        "address_zip_blank": "Geben Sie eine PLZ \/ eine Postleitzahl ein",
         "address_zip_invalid_for_country": "Geben Sie eine gültige Postleitzahl für %{country} ein",
-        "address_zip_invalid_for_country_and_province": "Geben Sie eine gültige PLZ/Postleitzahl für %{province}, %{country} ein",
+        "address_zip_invalid_for_country_and_province": "Geben Sie eine gültige PLZ\/Postleitzahl für %{province}, %{country} ein",
         "email_invalid": "Geben Sie eine gültige E-Mail-Adresse ein",
         "email_or_phone_blank": "Geben Sie eine E-Mail-Adresse oder Mobiltelefonnummer ein",
         "email_or_phone_invalid": "Geben Sie eine gültige E-Mail-Adresse oder eine Mobiltelefonnummer ein",
@@ -675,12 +675,12 @@
         "applied_free_shipping_discount_label": "Angewandt",
         "apply_discount_button_label": "Anwenden",
         "calculating_shipping": "Wird berechnet ...",
-        "cart_does_not_meet_discount_requirements_notice": "Rabattcode <strong style=\"text-transform:uppercase\">%{code}</strong> ist für die Artikel in Ihrem Warenkorb nicht gültig",
+        "cart_does_not_meet_discount_requirements_notice": "Rabattcode <strong style=\"text-transform:uppercase\">%{code}<\/strong> ist für die Artikel in Ihrem Warenkorb nicht gültig",
         "collapse_order_summary": "Bestellzusammenfassung ausblenden",
         "confirmation_number_label": "Bestätigung #%{confirmation_number}",
         "cost_table_title": "Kostenüberblick",
-        "customer_already_used_once_per_customer_discount_notice": "Der Rabattcode <strong style=\"text-transform:uppercase\">%{code}</strong> wurde bereits verwendet",
-        "customer_does_not_meet_discount_requirements_notice": "Der Rabattcode <strong style=\"text-transform:uppercase\">%{code}</strong> ist für Sie derzeit nicht verfügbar",
+        "customer_already_used_once_per_customer_discount_notice": "Der Rabattcode <strong style=\"text-transform:uppercase\">%{code}<\/strong> wurde bereits verwendet",
+        "customer_does_not_meet_discount_requirements_notice": "Der Rabattcode <strong style=\"text-transform:uppercase\">%{code}<\/strong> ist für Sie derzeit nicht verfügbar",
         "description_label": "Beschreibung",
         "discount_already_applied": "Auf diese Bestellung wurde bereits ein Rabatt angewendet. Sie können keinen weiteren Rabatt hinzufügen.",
         "discount_and_gift_card_savings_notice": "Nach %{discount_amount} an Rabatten und %{gift_card_amount} in Geschenkgutscheinen",
@@ -688,7 +688,7 @@
         "discount_has_been_removed": "Rabatt wurde entfernt",
         "discount_label": "Rabattcode",
         "discount_placeholder": "Rabattcode",
-        "discount_requires_customer_notice": "Geben Sie Ihre Versandinformationen ein, um den Rabattcode <strong style=\"text-transform:uppercase\">%{code}</strong> anzuwenden",
+        "discount_requires_customer_notice": "Geben Sie Ihre Versandinformationen ein, um den Rabattcode <strong style=\"text-transform:uppercase\">%{code}<\/strong> anzuwenden",
         "discount_savings_notice": "Nach %{discount_amount} an Rabatten",
         "discount_title": "Rabatt",
         "estimated_tax_label": "Geschätzte Steuer",
@@ -728,7 +728,7 @@
         "sale_price": "Verkaufspreis",
         "scroll_order_summary": "Scrollen für weitere Artikel",
         "shipping_default_value": "Wird beim nächsten Schritt berechnet",
-        "shipping_information_does_not_meet_discount_requirements_notice": "Der Rabattcode <strong style=\"text-transform:uppercase\">%{code}</strong> ist für Ihre Lieferanschrift nicht verfügbar",
+        "shipping_information_does_not_meet_discount_requirements_notice": "Der Rabattcode <strong style=\"text-transform:uppercase\">%{code}<\/strong> ist für Ihre Lieferanschrift nicht verfügbar",
         "shipping_label": "Versand",
         "shipping_pending_message": "Noch nicht verfügbar",
         "shipping_pending_value": "—",
@@ -767,7 +767,7 @@
         "different_credit_card_label": "Eine andere Kreditkarte verwenden",
         "discount_button_action_label": "Rabattcode anwenden",
         "express_checkout_free_order": "Eine kostenlose Bestellung wird Ihnen nicht berechnet",
-        "free_order_notice_html": "Ihre Bestellung ist <strong>kostenlos</strong>. Es ist keine Zahlung erforderlich.",
+        "free_order_notice_html": "Ihre Bestellung ist <strong>kostenlos<\/strong>. Es ist keine Zahlung erforderlich.",
         "generic_incorrect_card_info": "Ihre Zahlungsdaten konnten nicht verifiziert werden. Überprüfen Sie Ihre Kartendaten und versuchen Sie es erneut.",
         "no_js_credit_card_fields_redirect_hint": "Sie werden weitergeleitet, um Ihre Zahlungsdaten einzugeben.",
         "no_method_error": "Dieser Shop kann im Moment keine Zahlungen annehmen.",
@@ -795,7 +795,7 @@
       },
       "payment_summary": {
         "billing_address_title": "Rechnungsanschrift",
-        "credit_card_expires_on_notice": "Läuft am %{month}/%{year} ab",
+        "credit_card_expires_on_notice": "Läuft am %{month}\/%{year} ab",
         "express_payment_gateway_label": "Express",
         "free_label": "Kostenlos",
         "gift_card_current_balance_notice": "Aktueller Kontostand %{amount}",
