--- a/locales/el.json
+++ b/locales/el.json
@@ -23,8 +23,8 @@
         "civic_number_warning": "Προσθέστε έναν αριθμό σπιτιού, εάν υπάρχει",
         "company_label": "Εταιρεία",
         "contact_method_title": "Στοιχεία επικοινωνίας",
-        "country_code": "Κωδικός χώρας/περιοχής",
-        "country_label": "Χώρα/Περιοχή",
+        "country_code": "Κωδικός χώρας\/περιοχής",
+        "country_label": "Χώρα\/Περιοχή",
         "county_label": "Επαρχία",
         "county_placeholder": "Επαρχία",
         "delivery_option_title": "Τρόπος παράδοσης",
@@ -59,8 +59,8 @@
         "region_label": "Περιοχή",
         "region_none": "Καμία επιλογή",
         "region_placeholder": "Περιοχή",
-        "state_and_territory_label": "Κράτος/Επικράτεια",
-        "state_and_territory_placeholder": "Κράτος/Επικράτεια",
+        "state_and_territory_label": "Κράτος\/Επικράτεια",
+        "state_and_territory_placeholder": "Κράτος\/Επικράτεια",
         "state_label": "Πολιτεία",
         "state_placeholder": "Πολιτεία",
         "stored_addresses_label": "Αποθηκευμένες διευθύνσεις",
@@ -70,7 +70,7 @@
       },
       "customer_account": {
         "have_an_account_label": "Έχετε ήδη λογαριασμό;",
-        "not_user_label": "Δεν είστε ο/η %{first_name};",
+        "not_user_label": "Δεν είστε ο\/η %{first_name};",
         "save_my_information_label": "Αποθήκευση αυτών των στοιχείων για την επόμενη φορά",
         "sign_in_link_label": "Σύνδεση",
         "sign_out_link_label": "Αποσύνδεση"
@@ -109,8 +109,8 @@
         "address_company_blank": "Πληκτρολογήστε ένα όνομα εταιρείας",
         "address_company_contains_html_tags": "Η εταιρεία δεν μπορεί να περιλαμβάνει ετικέτες HTML.",
         "address_company_too_long": "Το όνομα της εταιρείας είναι πολύ μεγάλο (το μέγιστο όριο είναι 255 χαρακτήρες)",
-        "address_country_blank": "Επιλέξτε μια χώρα/περιοχή",
-        "address_country_not_supported": "Επί του παρόντος δεν πραγματοποιούμε αποστολές σε αυτήν τη χώρα/περιοχή. Πληκτρολογήστε μια νέα διεύθυνση αποστολής και προσπαθήστε ξανά.",
+        "address_country_blank": "Επιλέξτε μια χώρα\/περιοχή",
+        "address_country_not_supported": "Επί του παρόντος δεν πραγματοποιούμε αποστολές σε αυτήν τη χώρα\/περιοχή. Πληκτρολογήστε μια νέα διεύθυνση αποστολής και προσπαθήστε ξανά.",
         "address_first_name_blank": "Πληκτρολογήστε ένα όνομα",
         "address_first_name_contains_html_tags": "Το όνομα δεν μπορεί να περιλαμβάνει ετικέτες HTML.",
         "address_first_name_too_long": "Το όνομα είναι πολύ μεγάλο (το μέγιστο όριο είναι 255 χαρακτήρες)",
@@ -118,7 +118,7 @@
         "address_last_name_contains_html_tags": "Το επώνυμο δεν μπορεί να περιλαμβάνει ετικέτες HTML.",
         "address_last_name_too_long": "Το επώνυμο είναι πολύ μεγάλο (το μέγιστο όριο είναι 255 χαρακτήρες)",
         "address_phone_blank": "Πληκτρολογήστε έναν έγκυρο αριθμό τηλεφώνου",
-        "address_province_blank": "Επιλέξτε μια πολιτεία / επαρχία",
+        "address_province_blank": "Επιλέξτε μια πολιτεία \/ επαρχία",
         "address_zip_blank": "Πληκτρολογήστε έναν ταχυδρομικό κώδικα",
         "address_zip_invalid_for_country": "Πληκτρολογήστε έναν έγκυρο ταχυδρομικό κώδικα για τη(ν) %{country}",
         "address_zip_invalid_for_country_and_province": "Πληκτρολογήστε έναν έγκυρο ταχυδρομικό κώδικα για %{province}, %{country}",
@@ -240,12 +240,12 @@
         "applied_free_shipping_discount_label": "Εφαρμόστηκε",
         "apply_discount_button_label": "Εφαρμογή",
         "calculating_shipping": "Υπολογισμός...",
-        "cart_does_not_meet_discount_requirements_notice": "Ο εκπτωτικός κωδικός <strong style=\"text-transform:uppercase\">%{code}</strong> δεν είναι έγκυρος για τα προϊόντα στο καλάθι σας",
+        "cart_does_not_meet_discount_requirements_notice": "Ο εκπτωτικός κωδικός <strong style=\"text-transform:uppercase\">%{code}<\/strong> δεν είναι έγκυρος για τα προϊόντα στο καλάθι σας",
         "collapse_order_summary": "Απόκρυψη σύνοψης παραγγελίας",
         "confirmation_number_label": "Επιβεβαίωση #%{confirmation_number}",
         "cost_table_title": "Σύνοψη κόστους",
-        "customer_already_used_once_per_customer_discount_notice": "Ο εκπτωτικός κωδικός <strong style=\"text-transform:uppercase\">%{code}</strong> έχει ήδη χρησιμοποιηθεί",
-        "customer_does_not_meet_discount_requirements_notice": "Ο εκπτωτικός κωδικός <strong style=\"text-transform:uppercase\">%{code}</strong> δεν είναι διαθέσιμος για εσάς αυτήν τη στιγμή",
+        "customer_already_used_once_per_customer_discount_notice": "Ο εκπτωτικός κωδικός <strong style=\"text-transform:uppercase\">%{code}<\/strong> έχει ήδη χρησιμοποιηθεί",
+        "customer_does_not_meet_discount_requirements_notice": "Ο εκπτωτικός κωδικός <strong style=\"text-transform:uppercase\">%{code}<\/strong> δεν είναι διαθέσιμος για εσάς αυτήν τη στιγμή",
         "description_label": "Περιγραφή",
         "discount_already_applied": "Έχει εφαρμοστεί έκπτωση σε αυτήν την παραγγελία. Δεν μπορείτε να προσθέσετε άλλη έκπτωση.",
         "discount_and_gift_card_savings_notice": "Μετά από %{discount_amount} σε εκπτώσεις και %{gift_card_amount} σε δωροκάρτες",
@@ -253,7 +253,7 @@
         "discount_has_been_removed": "Η έκπτωση έχει αφαιρεθεί",
         "discount_label": "Εκπτωτικός κωδικός",
         "discount_placeholder": "Εκπτωτικός κωδικός",
-        "discount_requires_customer_notice": "Πληκτρολογήστε τα στοιχεία αποστολής σας για να εφαρμόσετε τον εκπτωτικό κωδικό <strong style=\"text-transform:uppercase\">%{code}</strong>",
+        "discount_requires_customer_notice": "Πληκτρολογήστε τα στοιχεία αποστολής σας για να εφαρμόσετε τον εκπτωτικό κωδικό <strong style=\"text-transform:uppercase\">%{code}<\/strong>",
         "discount_savings_notice": "Μετά από %{discount_amount} σε εκπτώσεις",
         "discount_title": "Έκπτωση",
         "estimated_tax_label": "Εκτιμώμενος φόρος",
@@ -293,7 +293,7 @@
         "sale_price": "Τιμή πώλησης",
         "scroll_order_summary": "Κάντε κύλιση για περισσότερα προϊόντα",
         "shipping_default_value": "Υπολογίζεται στο επόμενο βήμα",
-        "shipping_information_does_not_meet_discount_requirements_notice": "Ο εκπτωτικός κωδικός <strong style=\"text-transform:uppercase\">%{code}</strong> δεν είναι διαθέσιμος για τη διεύθυνση αποστολής σας",
+        "shipping_information_does_not_meet_discount_requirements_notice": "Ο εκπτωτικός κωδικός <strong style=\"text-transform:uppercase\">%{code}<\/strong> δεν είναι διαθέσιμος για τη διεύθυνση αποστολής σας",
         "shipping_label": "Αποστολή",
         "shipping_pending_message": "Δεν είναι ακόμα διαθέσιμο",
         "shipping_pending_value": "—",
@@ -332,7 +332,7 @@
         "different_credit_card_label": "Χρησιμοποιήστε διαφορετική πιστωτική κάρτα",
         "discount_button_action_label": "Εφαρμογή εκπτωτικού κωδικού",
         "express_checkout_free_order": "Δεν θα χρεωθείτε για μια δωρεάν παραγγελία",
-        "free_order_notice_html": "Η παραγγελία σας είναι <strong>δωρεάν</strong>. Δεν απαιτείται πληρωμή.",
+        "free_order_notice_html": "Η παραγγελία σας είναι <strong>δωρεάν<\/strong>. Δεν απαιτείται πληρωμή.",
         "generic_incorrect_card_info": "Δεν ήταν δυνατή η επαλήθευση των στοιχείων πληρωμής σας. Ελέγξτε τα στοιχεία της κάρτας σας και προσπαθήστε ξανά.",
         "no_js_credit_card_fields_redirect_hint": "Θα ανακατευθυνθείτε για να προσθέσετε τα στοιχεία πληρωμής σας.",
         "no_method_error": "Αυτό το κατάστημα δεν μπορεί να δεχτεί πληρωμές αυτήν τη στιγμή.",
@@ -360,7 +360,7 @@
       },
       "payment_summary": {
         "billing_address_title": "Διεύθυνση χρέωσης",
-        "credit_card_expires_on_notice": "Λήγει το(ν) %{month}/%{year}",
+        "credit_card_expires_on_notice": "Λήγει το(ν) %{month}\/%{year}",
         "express_payment_gateway_label": "Άμεση παράδοση",
         "free_label": "Δωρεάν",
         "gift_card_current_balance_notice": "Τρέχον υπόλοιπο %{amount}",
@@ -545,7 +545,7 @@
         "login": "Σύνδεση",
         "login_description": "Μπορείτε να βρείτε τον αριθμό της παραγγελίας σας στην απόδειξη που λάβατε μέσω ηλεκτρονικού ταχυδρομείου.",
         "login_description_phone": "Μπορείτε να βρείτε τον αριθμό της παραγγελίας σας στην απόδειξη που λάβατε μέσω γραπτού μηνύματος.",
-        "login_not_customer_html": "Δεν είστε ο/η %{name}; Μπορείτε να %{link}",
+        "login_not_customer_html": "Δεν είστε ο\/η %{name}; Μπορείτε να %{link}",
         "login_reorder_link_text": {
           "one": "αγοράσετε και αυτό το προϊόν",
           "other": "αγοράσετε και αυτά τα προϊόντα"
