--- a/locales/es.json
+++ b/locales/es.json
@@ -61,13 +61,13 @@
       "account": "Cuenta",
       "cart": "Carrito",
       "language": "Idioma",
-      "country": "País/región"
+      "country": "País\/región"
     }
   },
   "footer": {
     "general": {
       "language": "Idioma",
-      "country": "País/región",
+      "country": "País\/región",
       "we_accept": "Acceptamos"
     },
     "newsletter": {
@@ -178,7 +178,7 @@
       "need_help": "¿Necesita ayuda?",
       "view_details": "Ver detalles",
       "include_taxes": "Impuesto incliudo.",
-      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link link--accented\">Envío calculado</a> en la compra",
+      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link link--accented\">Envío calculado<\/a> en la compra",
       "reviews_count": {
         "zero": "{{ count }} reseña",
         "one": "{{ count }} reseña",
@@ -324,12 +324,12 @@
       "fulfillment_status": "Estado del envío",
       "view_details": "Ver detalles del pedido",
       "cancelled_at": "Cancelado en: {{date}}. Motivo: {{reason}}",
-      "fulfillment_with_url_and_number_html": "Todos los productos se han enviado el {{date}}. Sigua el envío con el número {{tracking_number}} o haciendo <a href=\"{{tracking_url}}\" target=\"_blank\">clic aquí</a>.",
-      "fulfillment_with_url_html": "Todos los productos han sido enviados el {{date}}. Sigua el envío haciendo <a href=\"{{tracking_url}}\" target=\"_blank\">clic aquí</a>.",
+      "fulfillment_with_url_and_number_html": "Todos los productos se han enviado el {{date}}. Sigua el envío con el número {{tracking_number}} o haciendo <a href=\"{{tracking_url}}\" target=\"_blank\">clic aquí<\/a>.",
+      "fulfillment_with_url_html": "Todos los productos han sido enviados el {{date}}. Sigua el envío haciendo <a href=\"{{tracking_url}}\" target=\"_blank\">clic aquí<\/a>.",
       "fulfillment_with_number_html": "Todos los productos han sido enviados el {{date}}. Sigua el envío con el número {{tracking_number}}.",
       "fulfillment_html": "Todos los productos han sido enviados el {{date}}.",
-      "line_fulfillment_with_url_and_number_html": "Todos los productos se han enviado el {{date}}. Sigua el envío con el número {{tracking_number}} o haciendo <a href=\"{{tracking_url}}\" target=\"_blank\">clic aquí</a>.",
-      "line_fulfillment_with_url_html": "Todos los productos se han enviado el {{date}}. Sigua el envío haciendo <a href=\"{{tracking_url}}\" target=\"_blank\">clic aquí</a>.",
+      "line_fulfillment_with_url_and_number_html": "Todos los productos se han enviado el {{date}}. Sigua el envío con el número {{tracking_number}} o haciendo <a href=\"{{tracking_url}}\" target=\"_blank\">clic aquí<\/a>.",
+      "line_fulfillment_with_url_html": "Todos los productos se han enviado el {{date}}. Sigua el envío haciendo <a href=\"{{tracking_url}}\" target=\"_blank\">clic aquí<\/a>.",
       "line_fulfillment_with_number_html": "Todos los productos se han enviado el {{date}}. Sigua el envío con el número {{tracking_number}}.",
       "line_fulfillment_html": "Todos los productos se han enviado el {{date}}.",
       "total": "Total",
@@ -476,8 +476,8 @@
         "address_company_blank": "Introduzca un nombre de empresa",
         "address_company_contains_html_tags": "La empresa no puede contener etiquetas HTML.",
         "address_company_too_long": "El nombre de la empresa es demasiado largo (el máximo es 255 caracteres)",
-        "address_country_blank": "Seleccione un país/región",
-        "address_country_not_supported": "Actualmente, no enviamos a este país/región. Introduzca una nueva dirección de envío e inténtelo de nuevo.",
+        "address_country_blank": "Seleccione un país\/región",
+        "address_country_not_supported": "Actualmente, no enviamos a este país\/región. Introduzca una nueva dirección de envío e inténtelo de nuevo.",
         "address_first_name_blank": "Introduzca un nombre",
         "address_first_name_contains_html_tags": "El nombre no puede contener etiquetas HTML.",
         "address_first_name_too_long": "El nombre es demasiado largo (el máximo es 255 caracteres)",
@@ -485,7 +485,7 @@
         "address_last_name_contains_html_tags": "El apellido no puede contener etiquetas HTML.",
         "address_last_name_too_long": "El apellido es demasiado largo (el máximo es 255 caracteres)",
         "address_phone_blank": "Introduzca un número de teléfono válido",
-        "address_province_blank": "Seleccione un estado / provincia",
+        "address_province_blank": "Seleccione un estado \/ provincia",
         "address_zip_blank": "Introduzca un código postal"
       },
       "general": {
@@ -580,12 +580,12 @@
         "applied_free_shipping_discount_label": "Aplicado",
         "apply_discount_button_label": "Aplicar",
         "calculating_shipping": "Calculando...",
-        "cart_does_not_meet_discount_requirements_notice": "El código de descuento <strong style=\"text-transform:uppercase\">%{code}</strong> no es válido para los artículos de su carrito",
+        "cart_does_not_meet_discount_requirements_notice": "El código de descuento <strong style=\"text-transform:uppercase\">%{code}<\/strong> no es válido para los artículos de su carrito",
         "collapse_order_summary": "Ocultar resumen de pedido",
         "confirmation_number_label": "N.º de confirmación %{confirmation_number}",
         "cost_table_title": "Resumen de costes",
-        "customer_already_used_once_per_customer_discount_notice": "El código de descuento <strong style=\"text-transform:uppercase\">%{code}</strong> ya se ha utilizado",
-        "customer_does_not_meet_discount_requirements_notice": "El código de descuento <strong style=\"text-transform:uppercase\">%{code}</strong> no está disponible en este momento",
+        "customer_already_used_once_per_customer_discount_notice": "El código de descuento <strong style=\"text-transform:uppercase\">%{code}<\/strong> ya se ha utilizado",
+        "customer_does_not_meet_discount_requirements_notice": "El código de descuento <strong style=\"text-transform:uppercase\">%{code}<\/strong> no está disponible en este momento",
         "description_label": "Descripción",
         "discount_already_applied": "Se ha aplicado un descuento a este pedido. No puede añadir otro descuento.",
         "discount_and_gift_card_savings_notice": "Después de %{discount_amount} en descuentos y %{gift_card_amount} en tarjetas de regalo",
@@ -593,7 +593,7 @@
         "discount_has_been_removed": "Se ha eliminado el descuento",
         "discount_label": "Código de descuento",
         "discount_placeholder": "Código de descuento",
-        "discount_requires_customer_notice": "Introduzca sus datos de envío para aplicar el código de descuento <strong style=\"text-transform:uppercase\">%{code}</strong>",
+        "discount_requires_customer_notice": "Introduzca sus datos de envío para aplicar el código de descuento <strong style=\"text-transform:uppercase\">%{code}<\/strong>",
         "discount_savings_notice": "Después de %{discount_amount} en descuentos",
         "discount_title": "Descuento",
         "estimated_tax_label": "Impuesto estimado",
@@ -633,7 +633,7 @@
         "sale_price": "Precio de venta",
         "scroll_order_summary": "Desplácese para obtener más elementos",
         "shipping_default_value": "Calculado en el siguiente paso",
-        "shipping_information_does_not_meet_discount_requirements_notice": "El código de descuento <strong style=\"text-transform:uppercase\">%{code}</strong> no está disponible para su dirección de envío",
+        "shipping_information_does_not_meet_discount_requirements_notice": "El código de descuento <strong style=\"text-transform:uppercase\">%{code}<\/strong> no está disponible para su dirección de envío",
         "shipping_label": "Envío",
         "shipping_pending_message": "Aún no disponible",
         "shipping_pending_value": "—",
@@ -672,7 +672,7 @@
         "different_credit_card_label": "Usar una tarjeta de crédito diferente",
         "discount_button_action_label": "Aplicar código de descuento",
         "express_checkout_free_order": "No se le cobrará por un pedido gratuito",
-        "free_order_notice_html": "Su pedido es <strong>gratuito</strong>. No se requiere pago.",
+        "free_order_notice_html": "Su pedido es <strong>gratuito<\/strong>. No se requiere pago.",
         "generic_incorrect_card_info": "No se han podido verificar sus datos de pago. Compruebe los datos de su tarjeta y vuelva a intentarlo.",
         "no_js_credit_card_fields_redirect_hint": "Será redirigido para añadir su información de pago.",
         "no_method_error": "Esta tienda no puede aceptar pagos en este momento.",
@@ -700,7 +700,7 @@
       },
       "payment_summary": {
         "billing_address_title": "Dirección de facturación",
-        "credit_card_expires_on_notice": "Vence el %{month}/%{year}",
+        "credit_card_expires_on_notice": "Vence el %{month}\/%{year}",
         "express_payment_gateway_label": "Exprés",
         "free_label": "Gratis",
         "gift_card_current_balance_notice": "Saldo actual %{amount}",
@@ -1009,8 +1009,8 @@
         "civic_number_warning": "Añada un número de casa si tiene uno",
         "company_label": "Empresa",
         "contact_method_title": "Información de contacto",
-        "country_code": "Código de país/región",
-        "country_label": "País/Región",
+        "country_code": "Código de país\/región",
+        "country_label": "País\/Región",
         "county_label": "Condado",
         "county_placeholder": "Condado",
         "delivery_option_title": "Método de entrega",
@@ -1045,8 +1045,8 @@
         "region_label": "Región",
         "region_none": "Ninguno seleccionado",
         "region_placeholder": "Región",
-        "state_and_territory_label": "Estado/territorio",
-        "state_and_territory_placeholder": "Estado/territorio",
+        "state_and_territory_label": "Estado\/territorio",
+        "state_and_territory_placeholder": "Estado\/territorio",
         "state_label": "Estado",
         "state_placeholder": "Estado",
         "stored_addresses_label": "Direcciones guardadas",
