--- a/locales/fr.json
+++ b/locales/fr.json
@@ -61,13 +61,13 @@
       "account": "Compte",
       "cart": "Panier",
       "language": "Langue",
-      "country": "Pays/région"
+      "country": "Pays\/région"
     }
   },
   "footer": {
     "general": {
       "language": "Langue",
-      "country": "Pays/région",
+      "country": "Pays\/région",
       "we_accept": "Nous acceptons"
     },
     "newsletter": {
@@ -178,7 +178,7 @@
       "need_help": "Besoin d'aide ?",
       "view_details": "Afficher les détails",
       "include_taxes": "Taxe incluse",
-      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link link--accented\">Frais d'envoi calculés</a> à la caisse",
+      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link link--accented\">Frais d'envoi calculés<\/a> à la caisse",
       "reviews_count": {
         "zero": "{{ count }} avis",
         "one": "{{ count }} avis",
@@ -324,12 +324,12 @@
       "fulfillment_status": "Statut de l'envoi",
       "view_details": "Voir détails",
       "cancelled_at": "Annulé le {{date}}. Raison : {{reason}}",
-      "fulfillment_with_url_and_number_html": "Tous les produits ont été envoyés le {{date}}. Suivez le colis avec le code {{tracking_number}} ou en <a href=\"{{tracking_url}}\" target=\"_blank\">cliquant ici</a>.",
-      "fulfillment_with_url_html": "Tous les produits ont été envoyés le {{date}}. Suivez le colis en <a href=\"{{tracking_url}}\" target=\"_blank\">cliquant ici</a>.",
+      "fulfillment_with_url_and_number_html": "Tous les produits ont été envoyés le {{date}}. Suivez le colis avec le code {{tracking_number}} ou en <a href=\"{{tracking_url}}\" target=\"_blank\">cliquant ici<\/a>.",
+      "fulfillment_with_url_html": "Tous les produits ont été envoyés le {{date}}. Suivez le colis en <a href=\"{{tracking_url}}\" target=\"_blank\">cliquant ici<\/a>.",
       "fulfillment_with_number_html": "Tous les produits ont été envoyés le {{date}}. Suivez le colis avec le code {{tracking_number}}.",
       "fulfillment_html": "Tous les produits ont été envoyés le {{date}}.",
-      "line_fulfillment_with_url_and_number_html": "Ce produit a été envoyé le {{date}}. Suivez le colis avec le code {{tracking_number}} ou en <a href=\"{{tracking_url}}\" target=\"_blank\">cliquant ici</a>.",
-      "line_fulfillment_with_url_html": "Ce produit a été envoyé le {{date}}. Suivez le colis en <a href=\"{{tracking_url}}\" target=\"_blank\">cliquant ici</a>.",
+      "line_fulfillment_with_url_and_number_html": "Ce produit a été envoyé le {{date}}. Suivez le colis avec le code {{tracking_number}} ou en <a href=\"{{tracking_url}}\" target=\"_blank\">cliquant ici<\/a>.",
+      "line_fulfillment_with_url_html": "Ce produit a été envoyé le {{date}}. Suivez le colis en <a href=\"{{tracking_url}}\" target=\"_blank\">cliquant ici<\/a>.",
       "line_fulfillment_with_number_html": "Ce produit a été envoyé le {{date}}. Suivez le colis avec le code {{tracking_number}}.",
       "line_fulfillment_html": "Ce produit a été envoyé le {{date}}.",
       "total": "Total",
@@ -458,8 +458,8 @@
         "civic_number_warning": "Ajouter un numéro de maison s'il y en a un",
         "company_label": "Entreprise",
         "contact_method_title": "Coordonnées",
-        "country_code": "Code pays/région",
-        "country_label": "Pays/Région",
+        "country_code": "Code pays\/région",
+        "country_label": "Pays\/Région",
         "county_label": "Pays",
         "county_placeholder": "Pays",
         "delivery_option_title": "Méthode de livraison",
@@ -494,8 +494,8 @@
         "region_label": "Région",
         "region_none": "Aucune sélection",
         "region_placeholder": "Région",
-        "state_and_territory_label": "État/Territoire",
-        "state_and_territory_placeholder": "État/Territoire",
+        "state_and_territory_label": "État\/Territoire",
+        "state_and_territory_placeholder": "État\/Territoire",
         "state_label": "État",
         "state_placeholder": "État",
         "stored_addresses_label": "Adresses sauvegardées",
@@ -544,7 +544,7 @@
         "address_company_blank": "Saisissez le nom de l'entreprise",
         "address_company_contains_html_tags": "Le nom de l'entreprise ne peut pas contenir de balise HTML.",
         "address_company_too_long": "Le nom de l'entreprise est trop long (limite de 255 caractères max.)",
-        "address_country_blank": "Sélectionnez un(e) pays/région",
+        "address_country_blank": "Sélectionnez un(e) pays\/région",
         "address_country_not_supported": "Actuellement, nous n'effectuons pas de livraison dans ce pays ou cette région. Saisissez une nouvelle adresse de livraison et réessayez.",
         "address_first_name_blank": "Saisissez un prénom",
         "address_first_name_contains_html_tags": "Le prénom ne peut pas contenir de balise HTML.",
@@ -554,9 +554,9 @@
         "address_last_name_too_long": "Le nom est trop long (limite de 255 caractères max.)",
         "address_phone_blank": "Saisissez un numéro de téléphone valide",
         "address_province_blank": "Sélectionnez un État ou une province",
-        "address_zip_blank": "Saisissez le code ZIP/postal",
-        "address_zip_invalid_for_country": "Saisissez un code ZIP/postal valide pour l'/le/la %{pays}",
-        "address_zip_invalid_for_country_and_province": "Saisissez un code ZIP/postal valide pour l'/le/la %{province}, l'/le/la %{pays}",
+        "address_zip_blank": "Saisissez le code ZIP\/postal",
+        "address_zip_invalid_for_country": "Saisissez un code ZIP\/postal valide pour l'\/le\/la %{pays}",
+        "address_zip_invalid_for_country_and_province": "Saisissez un code ZIP\/postal valide pour l'\/le\/la %{province}, l'\/le\/la %{pays}",
         "email_invalid": "Saisissez un e-mail valide",
         "email_or_phone_blank": "Saisissez un e-mail ou un numéro de téléphone mobile",
         "email_or_phone_invalid": "Saisissez un e-mail ou un numéro de téléphone mobile valide",
@@ -675,12 +675,12 @@
         "applied_free_shipping_discount_label": "Appliqué",
         "apply_discount_button_label": "Appliquer",
         "calculating_shipping": "Calcul…",
-        "cart_does_not_meet_discount_requirements_notice": "Le code de réduction <strong style=\"text-transform:uppercase\">%{code}</strong> n'est pas valide pour les articles qui sont dans votre panier",
+        "cart_does_not_meet_discount_requirements_notice": "Le code de réduction <strong style=\"text-transform:uppercase\">%{code}<\/strong> n'est pas valide pour les articles qui sont dans votre panier",
         "collapse_order_summary": "Cacher le résumé de la commande",
         "confirmation_number_label": "Numéro de confirmation #%{confirmation_number}",
         "cost_table_title": "Résumé des coûts",
-        "customer_already_used_once_per_customer_discount_notice": "Le code de réduction <strong style=\"text-transform:uppercase\">%{code}</strong> a déjà été utilisé",
-        "customer_does_not_meet_discount_requirements_notice": "Le code de réduction <strong style=\"text-transform:uppercase\">%{code}</strong> n'est pas disponible pour vous pour le moment",
+        "customer_already_used_once_per_customer_discount_notice": "Le code de réduction <strong style=\"text-transform:uppercase\">%{code}<\/strong> a déjà été utilisé",
+        "customer_does_not_meet_discount_requirements_notice": "Le code de réduction <strong style=\"text-transform:uppercase\">%{code}<\/strong> n'est pas disponible pour vous pour le moment",
         "description_label": "Description",
         "discount_already_applied": "Une réduction a été appliquée à cette commande. Vous ne pouvez ajouter d'autre réduction.",
         "discount_and_gift_card_savings_notice": "Après une réduction de %{discount_amount} et %{gift_carte_amount} de cartes cadeaux",
@@ -688,7 +688,7 @@
         "discount_has_been_removed": "La réduction a été supprimée",
         "discount_label": "Code promotionnel",
         "discount_placeholder": "Code promotionnel",
-        "discount_requires_customer_notice": "Saisissez les informations concernant la livraison pour appliquer le code promotionnel <strong style=\"text-transform:uppercase\">%{code}</strong>",
+        "discount_requires_customer_notice": "Saisissez les informations concernant la livraison pour appliquer le code promotionnel <strong style=\"text-transform:uppercase\">%{code}<\/strong>",
         "discount_savings_notice": "Après %{discount_amount} de réduction",
         "discount_title": "Réduction",
         "estimated_tax_label": "Impôt estimatif",
@@ -728,7 +728,7 @@
         "sale_price": "Prix de vente",
         "scroll_order_summary": "Faites défiler pour voir plus d'articles",
         "shipping_default_value": "Calculé à la prochaine étape",
-        "shipping_information_does_not_meet_discount_requirements_notice": "Le code promotionnel <strong style=\"text-transform:uppercase\">%{code}</strong> n'est pas disponible pour votre adresse de livraison",
+        "shipping_information_does_not_meet_discount_requirements_notice": "Le code promotionnel <strong style=\"text-transform:uppercase\">%{code}<\/strong> n'est pas disponible pour votre adresse de livraison",
         "shipping_label": "Livraison",
         "shipping_pending_message": "Pas encore disponible",
         "shipping_pending_value": "—",
@@ -767,7 +767,7 @@
         "different_credit_card_label": "Utiliser une carte de crédit différente",
         "discount_button_action_label": "Appliquer le code promotionnel",
         "express_checkout_free_order": "Vous ne serez pas débité pour une commande gratuite",
-        "free_order_notice_html": "Votre commande est <strong>gratuite</strong>. Pas de paiement requis.",
+        "free_order_notice_html": "Votre commande est <strong>gratuite<\/strong>. Pas de paiement requis.",
         "generic_incorrect_card_info": "Les données concernant votre paiement n'ont pas pu être vérifiées. Vérifiez les données de votre carte et réessayez.",
         "no_js_credit_card_fields_redirect_hint": "Vous allez être redirigé pour ajouter les données de paiement.",
         "no_method_error": "Cette boutique ne peut pas accepter les paiements pour le moment.",
@@ -795,7 +795,7 @@
       },
       "payment_summary": {
         "billing_address_title": "Adresse de facturation",
-        "credit_card_expires_on_notice": "Expire le %{month}/%{year}",
+        "credit_card_expires_on_notice": "Expire le %{month}\/%{year}",
         "express_payment_gateway_label": "Express",
         "free_label": "Gratuit",
         "gift_card_current_balance_notice": "Solde actuel %{amount}",
@@ -867,7 +867,7 @@
         "free_rate_label": "Gratuit",
         "no_rates_contact_notice": "Contactez-nous pour avoir plus d'informations",
         "no_rates_for_cart_or_destination_notice": "Il n'y a pas de méthode de livraison disponible pour votre panier ou votre adresse",
-        "no_rates_for_country_notice": "Nous ne proposons pas la livraison vers l'/le/la {{ pays }} ou votre panier contient des articles qui ne peuvent pas être envoyés vers l'/le/la {{ pays }}.",
+        "no_rates_for_country_notice": "Nous ne proposons pas la livraison vers l'\/le\/la {{ pays }} ou votre panier contient des articles qui ne peuvent pas être envoyés vers l'\/le\/la {{ pays }}.",
         "one_time_purchase_shipping": "Livraison ponctuelle",
         "optional_shipping_line_delivery_instructions_label": "Instructions pour la livraison (facultatif)",
         "other_method": {
@@ -1008,7 +1008,7 @@
         "order_status_updates_with_missing": "Choisissez comment vous souhaitez obtenir les mises à jour concernant votre colis.",
         "order_status_updates_with_phone": "Vous recevrez des mises à jour sur l'acheminement et la livraison par texto.",
         "order_updates_current_step_prefix": "Étape actuelle : ",
-        "order_updates_description_html": "Des mises à jour seront envoyées au/à %{customer_contact}",
+        "order_updates_description_html": "Des mises à jour seront envoyées au\/à %{customer_contact}",
         "order_updates_description_missing": "Vous ne recevez pas les mises à jour au sujet de votre colis.",
         "order_updates_past_step_prefix": "Prochaine étape : ",
         "order_updates_submit_subscription": "Valider",
