--- a/locales/no.json
+++ b/locales/no.json
@@ -23,8 +23,8 @@
         "civic_number_warning": "Legg til et husnummer, hvis aktuelt",
         "company_label": "Firma",
         "contact_method_title": "Kontaktinformasjon",
-        "country_code": "Land-/regionkode",
-        "country_label": "Land/region",
+        "country_code": "Land-\/regionkode",
+        "country_label": "Land\/region",
         "county_label": "Fylke",
         "county_placeholder": "Fylke",
         "delivery_option_title": "Leveringsmetode",
@@ -59,8 +59,8 @@
         "region_label": "Region",
         "region_none": "Ingen valgt",
         "region_placeholder": "Region",
-        "state_and_territory_label": "Stat/territorium",
-        "state_and_territory_placeholder": "Stat/territorium",
+        "state_and_territory_label": "Stat\/territorium",
+        "state_and_territory_placeholder": "Stat\/territorium",
         "state_label": "Stat",
         "state_placeholder": "Stat",
         "stored_addresses_label": "Lagrede adresser",
@@ -109,8 +109,8 @@
         "address_company_blank": "Skriv inn et firmanavn",
         "address_company_contains_html_tags": "Firmanavn kan ikke inneholde HTML-koder.",
         "address_company_too_long": "Firmanavnet er for langt (maks er 255 tegn)",
-        "address_country_blank": "Velg et land/region",
-        "address_country_not_supported": "Vi sender for øyeblikket ikke til dette landet/denne regionen. Skriv inn en ny leveringsadresse og prøv på nytt.",
+        "address_country_blank": "Velg et land\/region",
+        "address_country_not_supported": "Vi sender for øyeblikket ikke til dette landet\/denne regionen. Skriv inn en ny leveringsadresse og prøv på nytt.",
         "address_first_name_blank": "Skriv inn et fornavn",
         "address_first_name_contains_html_tags": "Fornavn kan ikke inneholde HTML-koder.",
         "address_first_name_too_long": "Fornavnet er for langt (maks er 255 tegn)",
@@ -118,7 +118,7 @@
         "address_last_name_contains_html_tags": "Etternavn kan ikke inneholde HTML-koder.",
         "address_last_name_too_long": "Etternavnet er for langt (maks er 255 tegn)",
         "address_phone_blank": "Skriv inn et gyldig telefonnummer",
-        "address_province_blank": "Velg en stat/provins",
+        "address_province_blank": "Velg en stat\/provins",
         "address_zip_blank": "Skriv inn et postnummer",
         "address_zip_invalid_for_country": "Skriv inn et gyldig postnummer for %{country}",
         "address_zip_invalid_for_country_and_province": "Skriv inn et gyldig postnummer for %{province}, %{country}",
@@ -240,12 +240,12 @@
         "applied_free_shipping_discount_label": "Brukt",
         "apply_discount_button_label": "Bruk",
         "calculating_shipping": "Beregner …",
-        "cart_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}</strong> rabattkoden er ikke gyldig for varene i handlekurven",
+        "cart_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}<\/strong> rabattkoden er ikke gyldig for varene i handlekurven",
         "collapse_order_summary": "Skjul ordresammendrag",
         "confirmation_number_label": "Bekreftelse #%{confirmation_number}",
         "cost_table_title": "Kostnadssammendrag",
-        "customer_already_used_once_per_customer_discount_notice": "<strong style=\"text-transform:uppercase\">%{code}</strong> rabattkoden er allerede brukt",
-        "customer_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}</strong> rabattkode er ikke tilgjengelig for deg akkurat nå",
+        "customer_already_used_once_per_customer_discount_notice": "<strong style=\"text-transform:uppercase\">%{code}<\/strong> rabattkoden er allerede brukt",
+        "customer_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}<\/strong> rabattkode er ikke tilgjengelig for deg akkurat nå",
         "description_label": "Beskrivelse",
         "discount_already_applied": "Det er allerede brukt en rabatt på denne ordren. Du kan ikke legge til en ny rabatt.",
         "discount_and_gift_card_savings_notice": "Etter %{discount_amount} i rabatter og %{gift_card_amount} i gavekort",
@@ -253,7 +253,7 @@
         "discount_has_been_removed": "Rabatten er fjernet",
         "discount_label": "Rabattkode",
         "discount_placeholder": "Rabattkode",
-        "discount_requires_customer_notice": "Skriv inn leveringsinformasjonen for å bruke <strong style=\"text-transform:uppercase\">%{code}</strong> rabattkoden",
+        "discount_requires_customer_notice": "Skriv inn leveringsinformasjonen for å bruke <strong style=\"text-transform:uppercase\">%{code}<\/strong> rabattkoden",
         "discount_savings_notice": "Etter %{discount_amount} i rabatter",
         "discount_title": "Rabatt",
         "estimated_tax_label": "Estimerte avgifter",
@@ -293,7 +293,7 @@
         "sale_price": "Salgspris",
         "scroll_order_summary": "Bla for flere elementer",
         "shipping_default_value": "Beregnes ved neste trinn",
-        "shipping_information_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}</strong> rabattkode er ikke tilgjengelig for leveringsadressen din",
+        "shipping_information_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">%{code}<\/strong> rabattkode er ikke tilgjengelig for leveringsadressen din",
         "shipping_label": "Forsendelse",
         "shipping_pending_message": "Ikke tilgjengelig ennå",
         "shipping_pending_value": "—",
@@ -332,7 +332,7 @@
         "different_credit_card_label": "Bruk et annet kredittkort",
         "discount_button_action_label": "Bruk rabattkode",
         "express_checkout_free_order": "Du vil ikke bli belastet for en gratis ordre",
-        "free_order_notice_html": "Ordren din er <strong>gratis</strong>. Ingen betaling nødvendig.",
+        "free_order_notice_html": "Ordren din er <strong>gratis<\/strong>. Ingen betaling nødvendig.",
         "generic_incorrect_card_info": "Betalingsopplysningene dine kunne ikke bekreftes. Sjekk kortopplysningene dine og prøv igjen.",
         "no_js_credit_card_fields_redirect_hint": "Du vil bli omdirigert for å legge til betalingsinformasjonen din.",
         "no_method_error": "Denne butikken kan ikke akseptere betalinger akkurat nå.",
@@ -360,7 +360,7 @@
       },
       "payment_summary": {
         "billing_address_title": "Fakturaadresse",
-        "credit_card_expires_on_notice": "Utløper %{month}/%{year}",
+        "credit_card_expires_on_notice": "Utløper %{month}\/%{year}",
         "express_payment_gateway_label": "Ekspress",
         "free_label": "Gratis",
         "gift_card_current_balance_notice": "Nåværende saldo %{amount}",
