--- a/locales/ru.json
+++ b/locales/ru.json
@@ -23,8 +23,8 @@
         "civic_number_warning": "Добавьте номер дома, если он у вас есть",
         "company_label": "Компания",
         "contact_method_title": "Контактная информация",
-        "country_code": "Код страны/региона",
-        "country_label": "Страна/регион",
+        "country_code": "Код страны\/региона",
+        "country_label": "Страна\/регион",
         "county_label": "Округ",
         "county_placeholder": "Округ",
         "delivery_option_title": "Способ доставки",
@@ -59,8 +59,8 @@
         "region_label": "Регион",
         "region_none": "Не выбрано",
         "region_placeholder": "Регион",
-        "state_and_territory_label": "Государство/территория",
-        "state_and_territory_placeholder": "Государство/территория",
+        "state_and_territory_label": "Государство\/территория",
+        "state_and_territory_placeholder": "Государство\/территория",
         "state_label": "Штат",
         "state_placeholder": "Штат",
         "stored_addresses_label": "Сохраненные адреса",
@@ -109,8 +109,8 @@
         "address_company_blank": "Введите название компании",
         "address_company_contains_html_tags": "Название компании не может содержать HTML-теги.",
         "address_company_too_long": "Слишком длинное название компании (максимум 255 символов)",
-        "address_country_blank": "Выберите страну/регион",
-        "address_country_not_supported": "В настоящее время мы не осуществляем доставку в эту страну/регион. Введите новый адрес доставки и повторите попытку.",
+        "address_country_blank": "Выберите страну\/регион",
+        "address_country_not_supported": "В настоящее время мы не осуществляем доставку в эту страну\/регион. Введите новый адрес доставки и повторите попытку.",
         "address_first_name_blank": "Введите имя",
         "address_first_name_contains_html_tags": "Имя не может содержать HTML-теги.",
         "address_first_name_too_long": "Слишком длинное имя (максимум 255 символов)",
@@ -118,7 +118,7 @@
         "address_last_name_contains_html_tags": "Фамилия не может содержать HTML-теги.",
         "address_last_name_too_long": "Слишком длинная фамилия (максимум 255 символов)",
         "address_phone_blank": "Введите действительный номер телефона",
-        "address_province_blank": "Выберите штат/провинцию",
+        "address_province_blank": "Выберите штат\/провинцию",
         "address_zip_blank": "Введите почтовый индекс",
         "address_zip_invalid_for_country": "Введите действительный почтовый индекс для %{country}",
         "address_zip_invalid_for_country_and_province": "Введите действительный почтовый индекс для %{province}, %{country}",
@@ -240,12 +240,12 @@
         "applied_free_shipping_discount_label": "Применена",
         "apply_discount_button_label": "Применить",
         "calculating_shipping": "Рассчитывается…",
-        "cart_does_not_meet_discount_requirements_notice": "Код скидки <strong style=\"text-transform:uppercase\">%{code}</strong> не применяется к товарам в вашей корзине",
+        "cart_does_not_meet_discount_requirements_notice": "Код скидки <strong style=\"text-transform:uppercase\">%{code}<\/strong> не применяется к товарам в вашей корзине",
         "collapse_order_summary": "Скрыть краткое описание заказа",
         "confirmation_number_label": "Подтверждение №%{confirmation_number}",
         "cost_table_title": "Сводка затрат",
-        "customer_already_used_once_per_customer_discount_notice": "Код скидки <strong style=\"text-transform:uppercase\">%{code}</strong> уже используется",
-        "customer_does_not_meet_discount_requirements_notice": "Код скидки <strong style=\"text-transform:uppercase\">%{code}</strong> сейчас недоступен",
+        "customer_already_used_once_per_customer_discount_notice": "Код скидки <strong style=\"text-transform:uppercase\">%{code}<\/strong> уже используется",
+        "customer_does_not_meet_discount_requirements_notice": "Код скидки <strong style=\"text-transform:uppercase\">%{code}<\/strong> сейчас недоступен",
         "description_label": "Описание",
         "discount_already_applied": " К этому заказу применена скидка. Вы не можете добавить еще одну скидку.",
         "discount_and_gift_card_savings_notice": "После скидок %{discount_amount} и подарочных карт на сумму %{gift_card_amount}",
@@ -253,7 +253,7 @@
         "discount_has_been_removed": "Скидка удалена",
         "discount_label": "Код скидки",
         "discount_placeholder": "Код скидки",
-        "discount_requires_customer_notice": "Введите информацию о доставке, чтобы применить код скидку <strong style=\"text-transform:uppercase\">%{code}</strong>",
+        "discount_requires_customer_notice": "Введите информацию о доставке, чтобы применить код скидку <strong style=\"text-transform:uppercase\">%{code}<\/strong>",
         "discount_savings_notice": "После скидки %{discount_amount} ",
         "discount_title": "Скидка",
         "estimated_tax_label": "Расчетный налог",
@@ -293,7 +293,7 @@
         "sale_price": "Цена продажи",
         "scroll_order_summary": "Прокрутите для просмотра дополнительных товаров",
         "shipping_default_value": "Рассчитано на следующем этапе",
-        "shipping_information_does_not_meet_discount_requirements_notice": "Код скидки <strong style=\"text-transform:uppercase\">%{code}</strong> недоступен для вашего адреса доставки",
+        "shipping_information_does_not_meet_discount_requirements_notice": "Код скидки <strong style=\"text-transform:uppercase\">%{code}<\/strong> недоступен для вашего адреса доставки",
         "shipping_label": "Доставка",
         "shipping_pending_message": "Пока недоступна",
         "shipping_pending_value": "—",
@@ -318,7 +318,7 @@
         "gift_card_current_balance_notice": "Текущий баланс %{amount}",
         "manual_payment_gateway_label": "Руководство",
         "billing_address_title": "Адрес для выставления счета",
-        "credit_card_expires_on_notice": "Срок действия истекает %{month}/%{year}",
+        "credit_card_expires_on_notice": "Срок действия истекает %{month}\/%{year}",
         "express_payment_gateway_label": "Экспресс"
       },
       "post_purchase": {
@@ -621,7 +621,7 @@
         "different_credit_card_label": "Использовать другую кредитную карту",
         "discount_button_action_label": "Применить код скидки",
         "express_checkout_free_order": "С вас не будет списана плата за бесплатный заказ",
-        "free_order_notice_html": "Ваш заказ <strong>бесплатный</strong>. Оплата не требуется.",
+        "free_order_notice_html": "Ваш заказ <strong>бесплатный<\/strong>. Оплата не требуется.",
         "generic_incorrect_card_info": "Не удалось проверить ваши платежные реквизиты. Проверьте данные карты и повторите попытку.",
         "no_js_credit_card_fields_redirect_hint": "Вы будете перенаправлены для добавления платежной информации.",
         "no_method_error": "Этот магазин сейчас не может принимать платежи.",
