--- a/locales/th.json
+++ b/locales/th.json
@@ -23,8 +23,8 @@
         "civic_number_warning": "เพิ่มเลขที่บ้าน หากคุณมี",
         "company_label": "บริษัท",
         "contact_method_title": "ข้อมูลติดต่อ",
-        "country_code": "รหัสประเทศ/ภูมิภาค",
-        "country_label": "ประเทศ/ภูมิภาค",
+        "country_code": "รหัสประเทศ\/ภูมิภาค",
+        "country_label": "ประเทศ\/ภูมิภาค",
         "county_label": "เขต",
         "county_placeholder": "เขต",
         "delivery_option_title": "วิธีการจัดส่ง",
@@ -59,8 +59,8 @@
         "region_label": "ภูมิภาค",
         "region_none": "ไม่ได้เลือก",
         "region_placeholder": "ภูมิภาค",
-        "state_and_territory_label": "รัฐ/อาณาเขต",
-        "state_and_territory_placeholder": "รัฐ/อาณาเขต",
+        "state_and_territory_label": "รัฐ\/อาณาเขต",
+        "state_and_territory_placeholder": "รัฐ\/อาณาเขต",
         "state_label": "รัฐ",
         "state_placeholder": "รัฐ",
         "stored_addresses_label": "ที่อยู่ที่บันทึก",
@@ -109,8 +109,8 @@
         "address_company_blank": "กรอกชื่อบริษัท",
         "address_company_contains_html_tags": "บริษัทไม่สามารถมีแท็ก HTML",
         "address_company_too_long": "ชื่อบริษัทยาวเกินไป (สูงสุด 255 ตัวอักษร)",
-        "address_country_blank": "เลือกประเทศ/ภูมิภาค",
-        "address_country_not_supported": "เราไม่จัดส่งไปยังประเทศ/ภูมิภาคนี้ในขณะนี้ กรอกที่อยู่เพื่อการจัดส่งใหม่และลองอีกครั้ง",
+        "address_country_blank": "เลือกประเทศ\/ภูมิภาค",
+        "address_country_not_supported": "เราไม่จัดส่งไปยังประเทศ\/ภูมิภาคนี้ในขณะนี้ กรอกที่อยู่เพื่อการจัดส่งใหม่และลองอีกครั้ง",
         "address_first_name_blank": "กรอกชื่อจริง",
         "address_first_name_contains_html_tags": "ชื่อจริงไม่สามารถมีแท็ก HTML",
         "address_first_name_too_long": "ชื่อจริงยาวเกินไป (สูงสุด 255 ตัวอักษร)",
@@ -118,7 +118,7 @@
         "address_last_name_contains_html_tags": "นามสกุลไม่สามารถมีแท็ก HTML",
         "address_last_name_too_long": "นามสกุลยาวเกินไป (สูงสุด 255 ตัวอักษร)",
         "address_phone_blank": "กรอกหมายเลขโทรศัพท์ที่ถูกต้อง",
-        "address_province_blank": "เลือกรัฐ / จังหวัด",
+        "address_province_blank": "เลือกรัฐ \/ จังหวัด",
         "address_zip_blank": "กรอกรหัสไปรษณีย์",
         "address_zip_invalid_for_country": "กรอกรหัสไปรษณีย์สำหรับ %{country}",
         "address_zip_invalid_for_country_and_province": "กรอกรหัสไปรษณีย์สำหรับ %{province} %{country}",
@@ -240,12 +240,12 @@
         "applied_free_shipping_discount_label": "ปรับใช้แล้ว",
         "apply_discount_button_label": "ปรับใช้",
         "calculating_shipping": "กำลังคำนวณ…",
-        "cart_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">รหัสส่วนลด %{code}</strong> ไม่สามารถใช้งานได้สำหรับสินค้าในรถเข็นของคุณ",
+        "cart_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">รหัสส่วนลด %{code}<\/strong> ไม่สามารถใช้งานได้สำหรับสินค้าในรถเข็นของคุณ",
         "collapse_order_summary": "ซ่อนสรุปคำสั่งซื้อ",
         "confirmation_number_label": "การยืนยัน #%{confirmation_number}",
         "cost_table_title": "สรุปค่าใช้จ่าย",
-        "customer_already_used_once_per_customer_discount_notice": "รหัสส่วนลด <strong style=\"text-transform:uppercase\">%{code}</strong> ได้ใช้งานไปแล้ว",
-        "customer_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">รหัสส่วนลด %{code}</strong> ไม่สามารถใช้งานโดยคุณได้ในขณะนี้",
+        "customer_already_used_once_per_customer_discount_notice": "รหัสส่วนลด <strong style=\"text-transform:uppercase\">%{code}<\/strong> ได้ใช้งานไปแล้ว",
+        "customer_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">รหัสส่วนลด %{code}<\/strong> ไม่สามารถใช้งานโดยคุณได้ในขณะนี้",
         "description_label": "คำอธิบาย",
         "discount_already_applied": "ปรับใช้ส่วนลดกับคำสั่งซื้อนี้แล้ว คุณยังไม่ได้เพิ่มส่วนลดอื่น ๆ",
         "discount_and_gift_card_savings_notice": "หลังจาก %{discount_amount} ในส่วนลดและ %{gift_card_amount} ในบัตรของขวัญ",
@@ -253,7 +253,7 @@
         "discount_has_been_removed": "นำส่วนลดออกแล้ว",
         "discount_label": "รหัสส่วนลด",
         "discount_placeholder": "รหัสส่วนลด",
-        "discount_requires_customer_notice": "กรอกข้อมูลการจัดส่งเพื่อปรับใช้รหัสส่วนลด <strong style=\"text-transform:uppercase\">%{code}</strong>",
+        "discount_requires_customer_notice": "กรอกข้อมูลการจัดส่งเพื่อปรับใช้รหัสส่วนลด <strong style=\"text-transform:uppercase\">%{code}<\/strong>",
         "discount_savings_notice": "หลังจาก %{discount_amount} ในส่วนลด",
         "discount_title": "ส่วนลด",
         "estimated_tax_label": "ภาษีโดยประมาณ",
@@ -293,7 +293,7 @@
         "sale_price": "ราคาส่วนลด",
         "scroll_order_summary": "เลื่อนสำหรับสินค้าเพิ่มเติม",
         "shipping_default_value": "คำนวณที่ขั้นตอนถัดไป",
-        "shipping_information_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">รหัสส่วนลด %{code}</strong> ไม่สามารถใช้งานได้สำหรับที่อยู่เพื่อการจัดส่งของคุณ",
+        "shipping_information_does_not_meet_discount_requirements_notice": "<strong style=\"text-transform:uppercase\">รหัสส่วนลด %{code}<\/strong> ไม่สามารถใช้งานได้สำหรับที่อยู่เพื่อการจัดส่งของคุณ",
         "shipping_label": "การจัดส่ง",
         "shipping_pending_message": "ยังไม่สามารถใช้งานได้",
         "shipping_pending_value": "—",
@@ -332,7 +332,7 @@
         "different_credit_card_label": "ใช้บัตรเครดิตอื่น",
         "discount_button_action_label": "ปรับใช้รหัสส่วนลด",
         "express_checkout_free_order": "คุณจะไม่ได้รับการเรียกเก็บเงินสำหรับคำสั่งซื้อฟรี",
-        "free_order_notice_html": "คำสั่งซื้อของคุณ<strong>ฟรี</strong> ไม่ต้องมีการชำระเงิน",
+        "free_order_notice_html": "คำสั่งซื้อของคุณ<strong>ฟรี<\/strong> ไม่ต้องมีการชำระเงิน",
         "generic_incorrect_card_info": "ไม่สามารถยืนยันรายละเอียดการชำระเงินของคุณได้ ตรวจสอบรายละเอียดบัตรและลองอีกครั้ง",
         "no_js_credit_card_fields_redirect_hint": "คุณจะได้รับการนำทางไปยังการเพิ่มข้อมูลการชำระเงินของคุณ",
         "no_method_error": "ร้านค้านี้ไม่ยอมรับการชำระเงินในขณะนี้",
@@ -360,7 +360,7 @@
       },
       "payment_summary": {
         "billing_address_title": "ที่อยู่ในการเรียกเก็บเงิน",
-        "credit_card_expires_on_notice": "หมดอายุเมื่อ %{month}/%{year}",
+        "credit_card_expires_on_notice": "หมดอายุเมื่อ %{month}\/%{year}",
         "express_payment_gateway_label": "ด่วน",
         "free_label": "ฟรี",
         "gift_card_current_balance_notice": "ยอดคงเหลือในปัจจุบัน %{amount}",
