--- a/locales/pl.json
+++ b/locales/pl.json
@@ -61,13 +61,13 @@
       "account": "Konto",
       "cart": "Koszyk",
       "language": "Język",
-      "country": "Kraj/region"
+      "country": "Kraj\/region"
     }
   },
   "footer": {
     "general": {
       "language": "Język",
-      "country": "Kraj/region",
+      "country": "Kraj\/region",
       "we_accept": "Akceptujemy"
     },
     "newsletter": {
@@ -181,7 +181,7 @@
       "need_help": "Potrzebujesz pomocy?",
       "view_details": "Poznaj szczegóły",
       "include_taxes": "W tym VAT.",
-      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link link--accented\">Dostawa obliczana</a> przy kasie",
+      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link link--accented\">Dostawa obliczana<\/a> przy kasie",
       "reviews_count": {
         "zero": "Brak opinii",
         "one": "{{ count }} opinia",
@@ -333,12 +333,12 @@
       "fulfillment_status": "Status realizacji",
       "view_details": "Zobacz szczegóły zamówienia",
       "cancelled_at": "Anulowano w dniu: {{date}}. Powód: {{reason}}",
-      "fulfillment_with_url_and_number_html": "Wszystkie produkty zostały wysłane w dniu {{date}}. Śledź przesyłkę za pomocą numeru {{tracking_number}} lub <a href=\"{{tracking_url}}\" target=\"_blank\">klikając tutaj</a>.",
-      "fulfillment_with_url_html": "Wszystkie produkty zostały wysłane w dniu {{date}}. Śledź przesyłkę <a href=\"{{tracking_url}}\" target=\"_blank\">klikając tutaj</a>.",
+      "fulfillment_with_url_and_number_html": "Wszystkie produkty zostały wysłane w dniu {{date}}. Śledź przesyłkę za pomocą numeru {{tracking_number}} lub <a href=\"{{tracking_url}}\" target=\"_blank\">klikając tutaj<\/a>.",
+      "fulfillment_with_url_html": "Wszystkie produkty zostały wysłane w dniu {{date}}. Śledź przesyłkę <a href=\"{{tracking_url}}\" target=\"_blank\">klikając tutaj<\/a>.",
       "fulfillment_with_number_html": "Wszystkie produkty zostały wysłane w dniu {{date}}. Śledź przesyłkę za pomocą numeru {{tracking_number}}.",
       "fulfillment_html": "Wszystkie produkty zostały wysłane w dniu {{date}}.",
-      "line_fulfillment_with_url_and_number_html": "Ten produkt został wysłany w dniu {{date}}. Śledź przesyłkę za pomocą numeru {{tracking_number}} lub <a href=\"{{tracking_url}}\" target=\"_blank\">clicking here</a>.",
-      "line_fulfillment_with_url_html": "Ten produkt został wysłany w dniu {{date}}. Śledź przesyłkę <a href=\"{{tracking_url}}\" target=\"_blank\">klikając tutaj</a>.",
+      "line_fulfillment_with_url_and_number_html": "Ten produkt został wysłany w dniu {{date}}. Śledź przesyłkę za pomocą numeru {{tracking_number}} lub <a href=\"{{tracking_url}}\" target=\"_blank\">clicking here<\/a>.",
+      "line_fulfillment_with_url_html": "Ten produkt został wysłany w dniu {{date}}. Śledź przesyłkę <a href=\"{{tracking_url}}\" target=\"_blank\">klikając tutaj<\/a>.",
       "line_fulfillment_with_number_html": "Ten produkt został wysłany w dniu {{date}}. Śledź przesyłkę za pomocą numeru {{tracking_number}}.",
       "line_fulfillment_html": "Ten produkt został wysłany w dniu {{date}}.",
       "total": "Łącznie",
@@ -485,8 +485,8 @@
         "address_company_blank": "Wprowadź nazwę firmy",
         "address_company_contains_html_tags": "Pole Firma nie może zawierać znaczników HTML.",
         "address_company_too_long": "Nazwa firmy zawiera zbyt wiele znaków (można wpisać maks. 255 znaków)",
-        "address_country_blank": "Wybierz kraj/region",
-        "address_country_not_supported": "Aktualnie nie wysyłamy produktów do tego kraju/regionu. Wprowadź nowy adres dostawy i spróbuj ponownie.",
+        "address_country_blank": "Wybierz kraj\/region",
+        "address_country_not_supported": "Aktualnie nie wysyłamy produktów do tego kraju\/regionu. Wprowadź nowy adres dostawy i spróbuj ponownie.",
         "address_first_name_blank": "Wprowadź imię",
         "address_first_name_contains_html_tags": "Pole Imię nie może zawierać znaczników HTML.",
         "address_first_name_too_long": "Pole Imię zawiera zbyt wiele znaków (można wpisać maks. 255 znaków)",
@@ -494,7 +494,7 @@
         "address_last_name_contains_html_tags": "Pole Nazwisko nie może zawierać znaczników HTML.",
         "address_last_name_too_long": "Pole Nazwisko zawiera zbyt wiele znaków (można wpisać maks. 255 znaków)",
         "address_phone_blank": "Wprowadź prawidłowy nr telefonu",
-        "address_province_blank": "Wybierz stan/województwo",
+        "address_province_blank": "Wybierz stan\/województwo",
         "address_zip_blank": "Wprowadź kod pocztowy"
       },
       "general": {
@@ -589,12 +589,12 @@
         "applied_free_shipping_discount_label": "Zastosowano",
         "apply_discount_button_label": "Zastosuj",
         "calculating_shipping": "Przeliczanie…",
-        "cart_does_not_meet_discount_requirements_notice": "Kod rabatowy <strong style=\"text-transform:uppercase\">%{code}</strong> nie jest prawidłowym kodem dla przedmiotów w Twoim koszyku",
+        "cart_does_not_meet_discount_requirements_notice": "Kod rabatowy <strong style=\"text-transform:uppercase\">%{code}<\/strong> nie jest prawidłowym kodem dla przedmiotów w Twoim koszyku",
         "collapse_order_summary": "Ukryj podsumowanie zamówienia",
         "confirmation_number_label": "Potwierdzenie nr %{confirmation_number}",
         "cost_table_title": "Opłaty łącznie",
-        "customer_already_used_once_per_customer_discount_notice": "Kod rabatowy <strong style=\"text-transform:uppercase\">%{code}</strong> został już wykorzystany",
-        "customer_does_not_meet_discount_requirements_notice": "Kod rabatowy <strong style=\"text-transform:uppercase\">%{code}</strong> nie jest teraz dla Ciebie dostępny",
+        "customer_already_used_once_per_customer_discount_notice": "Kod rabatowy <strong style=\"text-transform:uppercase\">%{code}<\/strong> został już wykorzystany",
+        "customer_does_not_meet_discount_requirements_notice": "Kod rabatowy <strong style=\"text-transform:uppercase\">%{code}<\/strong> nie jest teraz dla Ciebie dostępny",
         "description_label": "Opis",
         "discount_already_applied": "Do tego zamówienia zastosowano rabat. Nie możesz zastosować dodatkowego rabatu.",
         "discount_and_gift_card_savings_notice": "Po zastosowaniu rabatu (%{discount_amount}) oraz kart podarunkowych (%{gift_card_amount})",
@@ -602,7 +602,7 @@
         "discount_has_been_removed": "Usunięto rabat",
         "discount_label": "Kod rabatowy",
         "discount_placeholder": "Kod rabatowy",
-        "discount_requires_customer_notice": "Wprowadź dane wysyłkowe, aby zastosować kod rabatowy <strong style=\"text-transform:uppercase\">%{code}</strong>",
+        "discount_requires_customer_notice": "Wprowadź dane wysyłkowe, aby zastosować kod rabatowy <strong style=\"text-transform:uppercase\">%{code}<\/strong>",
         "discount_savings_notice": "Po zastosowaniu rabatu (%{discount_amount})",
         "discount_title": "Rabat",
         "estimated_tax_label": "Przybliżona kwota podatku",
@@ -642,7 +642,7 @@
         "sale_price": "Cena sprzedaży",
         "scroll_order_summary": "Przewiń, aby wyświetlić więcej przedmiotów",
         "shipping_default_value": "Wyliczenie jest przedstawione przy następnym kroku",
-        "shipping_information_does_not_meet_discount_requirements_notice": "Kod rabatowy <strong style=\"text-transform:uppercase\">%{code}</strong> nie jest dostępny dla Twojego adresu dostawy",
+        "shipping_information_does_not_meet_discount_requirements_notice": "Kod rabatowy <strong style=\"text-transform:uppercase\">%{code}<\/strong> nie jest dostępny dla Twojego adresu dostawy",
         "shipping_label": "Wysyłka",
         "shipping_pending_message": "Jeszcze nie jest dostępny",
         "shipping_pending_value": "—",
@@ -681,7 +681,7 @@
         "different_credit_card_label": "Użyj innej karty kredytowej",
         "discount_button_action_label": "Zastosuj kod rabatowy",
         "express_checkout_free_order": "Nie zostaniesz obciążony(-a) tytułem bezpłatnego zamówienia",
-        "free_order_notice_html": "Twoje zamówienie jest <strong>darmowe</strong>. Nie musisz płacić.",
+        "free_order_notice_html": "Twoje zamówienie jest <strong>darmowe<\/strong>. Nie musisz płacić.",
         "generic_incorrect_card_info": "Nie można zweryfikować informacji dotyczących płatności. Sprawdź dane karty i spróbuj ponownie.",
         "no_js_credit_card_fields_redirect_hint": "Zostaniesz przekierowany(-a), aby dodać informacje dotyczące płatności.",
         "no_method_error": "Aktualnie ten sklep nie obsługuje płatności.",
@@ -709,7 +709,7 @@
       },
       "payment_summary": {
         "billing_address_title": "Adres rozliczeniowy",
-        "credit_card_expires_on_notice": "Termin ważności: %{month}/%{year}",
+        "credit_card_expires_on_notice": "Termin ważności: %{month}\/%{year}",
         "express_payment_gateway_label": "Ekspres",
         "free_label": "Bezpłatnie",
         "gift_card_current_balance_notice": "Aktualne saldo: %{amount}",
@@ -750,7 +750,7 @@
           "short": "Twoje zamówienie jest przetwarzane."
         },
         "you_will_not_be_charged": "Nie zostaniesz jeszcze obciążony(-a)",
-        "you_will_receive_confirmation": "W tej chwili otrzymujemy wiele zamówień. Wkrótce powinieneś/powinnaś otrzymać potwierdzenie w wiadomości e-mail lub wiadomości tekstowej. Jeżeli nie otrzymasz jej w ciągu godziny, powiadom nas o tym.",
+        "you_will_receive_confirmation": "W tej chwili otrzymujemy wiele zamówień. Wkrótce powinieneś\/powinnaś otrzymać potwierdzenie w wiadomości e-mail lub wiadomości tekstowej. Jeżeli nie otrzymasz jej w ciągu godziny, powiadom nas o tym.",
         "your_order_has_been_received_title": "Dziękujemy za Twoje zamówienie"
       },
       "review": {
@@ -764,7 +764,7 @@
           "change_shipping_method_link_label": "Zmień metodę dostawy",
           "contact_method_title": "Kontakt",
           "payment_method_title": "Płatność",
-          "shipping_address_title": "Wyślij do/na",
+          "shipping_address_title": "Wyślij do\/na",
           "shipping_method_title": "Metoda"
         },
         "checkout_as_guest": "Sfinalizuj zakupy jako gość"
@@ -786,7 +786,7 @@
         "optional_shipping_line_delivery_instructions_label": "Instrukcje dotyczące wysyłki (opcjonalnie)",
         "other_method": {
           "one": "%{count} inna metoda jest dostępna:",
-          "other": "%{count} innych(-e) metod(y) jest/są dostępnych(-e) od",
+          "other": "%{count} innych(-e) metod(y) jest\/są dostępnych(-e) od",
           "zero": "Brak innych metod"
         },
         "please_enter_your_shipping_information_notice": "Wprowadź dane wysyłkowe.",
@@ -1018,8 +1018,8 @@
         "civic_number_warning": "Dodaj nr domu, o ile dotyczy",
         "company_label": "Firma",
         "contact_method_title": "Dane kontaktowe",
-        "country_code": "Kod kraju/regionu",
-        "country_label": "Kraj/Region",
+        "country_code": "Kod kraju\/regionu",
+        "country_label": "Kraj\/Region",
         "county_label": "Hrabstwo",
         "county_placeholder": "Hrabstwo",
         "delivery_option_title": "Metoda dostawy",
@@ -1054,8 +1054,8 @@
         "region_label": "Region",
         "region_none": "Nie dokonano wyboru",
         "region_placeholder": "Region",
-        "state_and_territory_label": "Stan/Terytorium",
-        "state_and_territory_placeholder": "Stan/Terytorium",
+        "state_and_territory_label": "Stan\/Terytorium",
+        "state_and_territory_placeholder": "Stan\/Terytorium",
         "state_label": "Stan",
         "state_placeholder": "Stan",
         "stored_addresses_label": "Zapisane adresy",
