--- a/locales/sv.json
+++ b/locales/sv.json
@@ -61,13 +61,13 @@
       "account": "Konto",
       "cart": "Varukorg",
       "language": "Språk",
-      "country": "Land/Region"
+      "country": "Land\/Region"
     }
   },
   "footer": {
     "general": {
       "language": "Språk",
-      "country": "Land/Region",
+      "country": "Land\/Region",
       "we_accept": "Säker betalning med"
     },
     "newsletter": {
@@ -176,7 +176,7 @@
       "need_help": "Behöver du hjälp?",
       "view_details": "Visa detaljer",
       "include_taxes": "Inkl. moms.",
-      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link link--accented\">Frakt beräknas</a> i kassan",
+      "shipping_policy_html": "<a href=\"{{ link }}\" class=\"link link--accented\">Frakt beräknas<\/a> i kassan",
       "reviews_count": {
         "one": "{{ count }} omdöme",
         "other": "{{ count }} omdömen"
@@ -318,12 +318,12 @@
       "fulfillment_status": "Status",
       "view_details": "Visa information om ordern",
       "cancelled_at": "Avbruten den: {{date}}. Orsak: {{reason}}",
-      "fulfillment_with_url_and_number_html": "Alla produkter har skickats den {{date}}. Spåra försändelsen med spårningsnummer {{tracking_number}} eller genom att <a href=\"{{tracking_url}}\" target=\"_blank\">klicka här</a>.",
-      "fulfillment_with_url_html": "Alla produkter har skickats den {{date}}. Spåra försändelsen genom att <a href=\"{{tracking_url}}\" target=\"_blank\">klicka här</a>.",
+      "fulfillment_with_url_and_number_html": "Alla produkter har skickats den {{date}}. Spåra försändelsen med spårningsnummer {{tracking_number}} eller genom att <a href=\"{{tracking_url}}\" target=\"_blank\">klicka här<\/a>.",
+      "fulfillment_with_url_html": "Alla produkter har skickats den {{date}}. Spåra försändelsen genom att <a href=\"{{tracking_url}}\" target=\"_blank\">klicka här<\/a>.",
       "fulfillment_with_number_html": "Alla produkter har skickats den {{date}}. Spåra försändelsen med spårningsnummer {{tracking_number}}.",
       "fulfillment_html": "Alla produkter har skickats den {{date}}.",
-      "line_fulfillment_with_url_and_number_html": "Denna produkt har skickats den {{date}}. Spåra försändelsen med spårningsnummer {{tracking_number}} eller genom att <a href=\"{{tracking_url}}\" target=\"_blank\">klicka här</a>.",
-      "line_fulfillment_with_url_html": "Denna produkt har skickats den {{date}}. Spåra försändelsen genom att <a href=\"{{tracking_url}}\" target=\"_blank\">klicka här</a>.",
+      "line_fulfillment_with_url_and_number_html": "Denna produkt har skickats den {{date}}. Spåra försändelsen med spårningsnummer {{tracking_number}} eller genom att <a href=\"{{tracking_url}}\" target=\"_blank\">klicka här<\/a>.",
+      "line_fulfillment_with_url_html": "Denna produkt har skickats den {{date}}. Spåra försändelsen genom att <a href=\"{{tracking_url}}\" target=\"_blank\">klicka här<\/a>.",
       "line_fulfillment_with_number_html": "Denna produkt har skickats den {{date}}. Spåra försändelsen med spårningsnummernummer {{tracking_number}}.",
       "line_fulfillment_html": "Denna produkt har skickats den {{date}}.",
       "total": "Totalt",
@@ -452,8 +452,8 @@
         "civic_number_warning": "Ange ett husnummer om du har ett",
         "company_label": "Företag",
         "contact_method_title": "Kontaktuppgifter",
-        "country_code": "Lands-/regionskod",
-        "country_label": "Land/region",
+        "country_code": "Lands-\/regionskod",
+        "country_label": "Land\/region",
         "county_label": "Land",
         "county_placeholder": "Land",
         "delivery_option_title": "Leveransmetod",
@@ -488,8 +488,8 @@
         "region_label": "Region",
         "region_none": "Ingen vald",
         "region_placeholder": "Region",
-        "state_and_territory_label": "Stat/territorium",
-        "state_and_territory_placeholder": "Stat/territorium",
+        "state_and_territory_label": "Stat\/territorium",
+        "state_and_territory_placeholder": "Stat\/territorium",
         "state_label": "Stat",
         "state_placeholder": "Stat",
         "stored_addresses_label": "Sparade adresser",
@@ -538,8 +538,8 @@
         "address_company_blank": "Ange ett företagsnamn",
         "address_company_contains_html_tags": "Företaget får inte innehålla HTML-taggar.",
         "address_company_too_long": "Företagsnamnet är för långt (högst 255 tecken)",
-        "address_country_blank": "Välj ett land/en region",
-        "address_country_not_supported": "Vi levererar för närvarande inte till detta land/denna region. Ange en ny leveransadress och försök igen.",
+        "address_country_blank": "Välj ett land\/en region",
+        "address_country_not_supported": "Vi levererar för närvarande inte till detta land\/denna region. Ange en ny leveransadress och försök igen.",
         "address_first_name_blank": "Ange ett förnamn",
         "address_first_name_contains_html_tags": "Förnamnet får inte innehålla HTML-taggar.",
         "address_first_name_too_long": "Förnamnet är för långt (högst 255 tecken)",
@@ -547,7 +547,7 @@
         "address_last_name_contains_html_tags": "Efternamnet får inte innehålla HTML-taggar.",
         "address_last_name_too_long": "Efternamnet är för långt (högst 255 tecken)",
         "address_phone_blank": "Ange ett giltigt telefonnummer",
-        "address_province_blank": "Välj en stat/provins",
+        "address_province_blank": "Välj en stat\/provins",
         "address_zip_blank": "Ange ett postnummer",
         "address_zip_invalid_for_country": "Ange ett giltigt postnummer för %{country}",
         "address_zip_invalid_for_country_and_province": "Ange ett giltigt postnummer för %{province}, %{country}",
@@ -669,12 +669,12 @@
         "applied_free_shipping_discount_label": "Tillämpad",
         "apply_discount_button_label": "Tillämpa",
         "calculating_shipping": "Beräknar …",
-        "cart_does_not_meet_discount_requirements_notice": "Rabattkoden <strong style=\"text-transform:uppercase\">%{code}</strong> är inte giltig för artiklarna i din varukorg",
+        "cart_does_not_meet_discount_requirements_notice": "Rabattkoden <strong style=\"text-transform:uppercase\">%{code}<\/strong> är inte giltig för artiklarna i din varukorg",
         "collapse_order_summary": "Dölj ordersammanfattning",
         "confirmation_number_label": "Bekräftelse #%{confirmation_number}",
         "cost_table_title": "Kostnadssammanställning",
-        "customer_already_used_once_per_customer_discount_notice": "Rabattkoden <strong style=\"text-transform:uppercase\">%{code}</strong> har redan använts",
-        "customer_does_not_meet_discount_requirements_notice": "Rabattkoden <strong style=\"text-transform:uppercase\">%{code}</strong> är inte tillgänglig för dig just nu",
+        "customer_already_used_once_per_customer_discount_notice": "Rabattkoden <strong style=\"text-transform:uppercase\">%{code}<\/strong> har redan använts",
+        "customer_does_not_meet_discount_requirements_notice": "Rabattkoden <strong style=\"text-transform:uppercase\">%{code}<\/strong> är inte tillgänglig för dig just nu",
         "description_label": "Beskrivning",
         "discount_already_applied": "En rabatt har tillämpats på denna order. Du kan inte lägga till en rabatt till.",
         "discount_and_gift_card_savings_notice": "Efter %{discount_amount} i rabatter och %{gift_card_amount} i presentkort",
@@ -682,7 +682,7 @@
         "discount_has_been_removed": "Rabatt har tagits bort",
         "discount_label": "Rabattkod",
         "discount_placeholder": "Rabattkod",
-        "discount_requires_customer_notice": "Ange leveransinformation för att tillämpa rabattkoden <strong style=\"text-transform:uppercase\">%{code}</strong>",
+        "discount_requires_customer_notice": "Ange leveransinformation för att tillämpa rabattkoden <strong style=\"text-transform:uppercase\">%{code}<\/strong>",
         "discount_savings_notice": "Efter %{discount_amount} i rabatter",
         "discount_title": "Rabatt",
         "estimated_tax_label": "Beräknad skatt",
@@ -722,7 +722,7 @@
         "sale_price": "Försäljningspris",
         "scroll_order_summary": "Bläddra för fler artiklar",
         "shipping_default_value": "Beräknas vid nästa steg",
-        "shipping_information_does_not_meet_discount_requirements_notice": "Rabattkoden <strong style=\"text-transform:uppercase\">%{code}</strong> är inte tillgänglig för din leveransadress",
+        "shipping_information_does_not_meet_discount_requirements_notice": "Rabattkoden <strong style=\"text-transform:uppercase\">%{code}<\/strong> är inte tillgänglig för din leveransadress",
         "shipping_label": "Leverans",
         "shipping_pending_message": "Inte tillgänglig ännu",
         "shipping_pending_value": "—",
@@ -761,7 +761,7 @@
         "different_credit_card_label": "Använd ett annat kreditkort",
         "discount_button_action_label": "Använd rabattkod",
         "express_checkout_free_order": "Du kommer inte att debiteras för en gratis order",
-        "free_order_notice_html": "Din order är <strong>gratis</strong>. Ingen betalning krävs.",
+        "free_order_notice_html": "Din order är <strong>gratis<\/strong>. Ingen betalning krävs.",
         "generic_incorrect_card_info": "Dina betalningsuppgifter kunde inte verifieras. Kontrollera dina kortuppgifter och försök igen.",
         "no_js_credit_card_fields_redirect_hint": "Du kommer att omdirigeras för att lägga till din betalningsinformation.",
         "no_method_error": "Denna butik kan inte ta emot betalningar just nu.",
@@ -789,7 +789,7 @@
       },
       "payment_summary": {
         "billing_address_title": "Faktureringsadress",
-        "credit_card_expires_on_notice": "Upphör att gälla %{month}/%{year}",
+        "credit_card_expires_on_notice": "Upphör att gälla %{month}\/%{year}",
         "express_payment_gateway_label": "Express",
         "free_label": "Gratis",
         "gift_card_current_balance_notice": "Nuvarande saldo %{amount}",
